# maria

./: .gitignore  Cargo.toml  README.md  commands.txt  create_col.py  env.yml  justfile  tasks.md
data/: test.fa  test_msa.fa  test_small_gfa.gfa  triggers.txt
data/grammar/: tiny
data/pftag/: example.txt  test.fna  test.gfa  test.no_overlap.gfa  test_arbitrary.gfa  test_join.txt  test_join.txt.plainslp
data/real/: SARS-CoV2.5.fna  SARS-CoV2.5.fnajoin  SARS-CoV2.5.fnajoin.plainslp  SARS-CoV2.5.gfa  reads_R1.fastq  reads_R1.lengths  reads_R1.mems  reads_R1.pointers
data/small_example/: reads.fa  reads.mems  tag_array.txt  test_gfa.gfa
scripts/: create_col.py  fastmap2sam.py  generate_example_data.sh  print_plain_slp.c  tests.py  walks2paths.py
src/: arrays.rs  cli.rs  gp.rs  grammar.rs  lib.rs  main.rs  main3.rs  mem.rs  naive.rs  pf.rs  pfp_graph.rs  pred.rs  tests.rs  tests1.rs  tmp.rs
src/proptest-regressions/tests/: grammar.txt
src/tests/: grammar.rs  main.rs  test_pfgraph.rs
